google map and about page

--- a/parkshark/src/components/About/About.css
+++ b/parkshark/src/components/About/About.css
@@ -196,3 +196,18 @@
     font-weight: 700;
     font-style: normal;
   }
+
+  .members {
+    color: white;
+    font-family: var(--font-family-poppins);
+    font-size: var(--font-size-l);
+    font-weight: 500;
+    font-style: normal;
+  }
+
+  .member-box {
+    height: 90px;
+    width: 100%;
+    margin-top: 25px;
+    align-items: center;
+  }
