--- a/parkshark/src/components/Home/Marker.css
+++ b/parkshark/src/components/Home/Marker.css
@@ -4,7 +4,7 @@
     left: 50%;
     width: 18px;
     height: 18px;
-    background-color: #000;
+    background-color: red;
     border: 2px solid #fff;
     border-radius: 100%;
     user-select: none;
@@ -13,6 +13,6 @@
 
   marker:hover {
     z-index: 1;
-    border: 3px solid "blue";
-    color: #fff;
+    border: 3px solid black;
+    background-color: blue;
   }
