--- a/parkshark/src/components/Profile/Profile.css
+++ b/parkshark/src/components/Profile/Profile.css
@@ -1,12 +1,16 @@
+* {box-sizing: border-box;
+}
 .main-profile-box{
-    background-color: rgb(202, 230, 240);
+    background-color: rgb(200, 230, 240);
     height: 100vh;
+    margin-top: 20px;
 }
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(200, 230, 240);
 }
-* {box-sizing: border-box;}
+
 
 /* Style the input container */
 .input-container {
@@ -44,3 +48,4 @@ body {
     width: 50%;
     margin: auto;
 }
+h1 { font-size: 40px; }
