--- a/parkshark/src/components/Profile/Profile.css
+++ b/parkshark/src/components/Profile/Profile.css
@@ -49,3 +49,17 @@ body {
     margin: auto;
 }
 h1 { font-size: 40px; }
+h3 { font-size: 25px; 
+font-weight: bold;}
+
+button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 12px;
+}
